--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -4,7 +4,7 @@
         <div class="col-8 offset-2">
             <h3>Edit Your Listing</h3>
             <br>
-            <form method="POST" action="/listings/<%= listing._id%>?_method=PUT" novalidate class="needs-validation">
+            <form method="POST" action="/listings/<%= listing._id%>?_method=PUT" novalidate class="needs-validation" enctype="multipart/form-data">
                 <div class="mb-3">
                     <label for="title" class="form-label">Title</label>
                     <input name="listing[title]" value="<%= listing.title%>" type="text" class="form-control" required>
@@ -15,10 +15,13 @@
                     <textarea name="listing[description]"  type="text" class="form-control" required><%= listing.description%></textarea>
                     <div class="invalid-feedback">Please enter a short description</div>
                 </div>
+                <div class=" mb-3">
+                    Original Listing Image<br>
+                    <img src="<%= originalImageUrl %>" class="h-10 w-50"/>
+                </div>
                 <div class="mb-3">
-                    <label for="image" class="form-label">Image Link</label>
-                    <input name="listing[image]" value="<%= listing.image%>" type="text"  class="form-control" required>
-                    <div class="invalid-feedback">Please enter image link</div>
+                    <label for="image" class="form-label">Upload New Listing Image</label>
+                    <input name="listing[image]" value="<%= listing.image%>" type="file"  class="form-control">
                 </div>
                 <div class="row">
                     <div class="mb-3 col-md-4">
