--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -8,7 +8,7 @@
             <img src="<%=listing.image.url%>" class="card-img-top show-img" alt="listing_img">
             <div class="card-body">
                 <p class="card-text">
-                    <i><%= listing.owner%></i>
+                    <i><%= listing.owner.username%></i>
                 </p>
                 <p class="card-text"><%= listing.description%></p>
                 <p class="card-text">&#8377; <%= listing.price.toLocaleString("en-IN")%></p>
